--- a/src/UI/UIComponents/BODY/home/components/services/services.module.scss
+++ b/src/UI/UIComponents/BODY/home/components/services/services.module.scss
@@ -38,17 +38,6 @@
       justify-content: center;
       align-items: center;
     }
-
-    /*
-  * disable component for smaller screens *
-  navigation requires mouse for smooth interaction
-  so disabling it will lead to better user-experience for
-  smaller screen
-  */
-
-    @media screen and (max-width: 1024px) {
-      display: none !important;
-    }
   }
 }
 
